@@ -12,7 +12,7 @@
 
 
     <description>
-        JDK17, JPA/Hibernate, Docker + Postgres, Spring-Boot 2.6.1, JSF 2.3.9 Mojarra, PrimeFaces 11.0, No Spring Security,
+        JDK17, JPA/Hibernate, Docker + Postgres, Spring-Boot 2.6.1, JSF 2.3.9 Mojarra, PrimeFaces 11.0.0, No Spring Security,
         OpenAPI
     </description>
 
@@ -41,6 +41,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-cloud.version>2021.0.0-RC1</spring-cloud.version>
         <java.version>17</java.version>
+        <compilerArgs>
+            --enable-preview
+        </compilerArgs>
         <testcontainers.version>1.16.2</testcontainers.version>
         <downloadSources>true</downloadSources>
         <downloadJavadocs>true</downloadJavadocs>
